Canvis a testGetTotsUsuaris() de GestorUsuarisTest.java